--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Tomáš Ranocha</title>
-  <link rel="stylesheet" href="aboutme/css/styles.css">
+  <link rel="stylesheet" href="CSS/styles.css">
   <link rel="shortcut icon" href="images/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet">
 </head>
