--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Tomáš Ranocha</title>
-  <link rel="stylesheet" href="CSS/styles.css">
+  <link rel="stylesheet" href="css/styles.css">
   <link rel="shortcut icon" href="images/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet">
 </head>
@@ -41,7 +41,7 @@
     <div class="contact-me">
       <h2>Napište mi</h2>
       <h3>Máte jakékoliv dotazy, nebo také začínáte psát web?</h3>
-      <p>Neváhejte se ozvat!</p>
+      <p class="contact-message">Kontaktujte mě pomocí kterékoliv zde uvedené platformy. Neváhejte se ozvat!</p>
       <a class="btn" href="mailto:t.ranocha@gmail.com">Mail</a>
     </div>
   </div>
@@ -51,7 +51,7 @@
     <a class="footer-link" href="https://www.facebook.com/tomas.ranocha">Facebook</a>
     <a class="footer-link" href="https://twitter.com/TomasRanocha">Twitter</a>
     <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-    <p>© 2018 Tomáš Ranocha.</p>
+    <p class="copyright">© 2018 Tomáš Ranocha.</p>
   </div>
 
 
