--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="profile">
       <img class="profile-picture"src="images/Tomas.jpg" alt="profile-picture">
       <h2>Ahoj!</h2>
-      <p>Jmenuji se Tomáš Ranocha a zabývám se web designem. Tyto stránky složí jako můj projekt k procvičování programování a tvorby webu. Jak mi to jde posuďte sami 😅</p>
+      <p>Jmenuji se Tomáš Ranocha a zabývám se web designem. Tyto stránky slouží jako můj projekt k procvičování programování a tvorby webu. Jak mi to jde posuďte sami 😅</p>
     </div>
     <hr>
     <div class="skills">
